[package]
name = "mcp9808"
version = "0.1.0"
authors = ["Łukasz Wolańczyk <wolanczyk.lukasz@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Rust generic driver for MCP9808 temperature sensor."
repository = "https://github.com/lukwol/mcp9808"

[dependencies]
embedded-hal = "0.2.2"
num-traits = { version = "0.2", default-features = false }
num-derive = "0.2"
i2c-reg = "0.1"
